# pyconau24-talk

./: environment.yml  napari-fit-2024.ipynb  napari-pyconau24.md  napari-scipy-2023.ipynb
WM4196/: c3_c6_separation.ipynb  c3_or_c6_eigs.txt  eigenvalue_histograms.ipynb  input_table.tbl  noted.md  vis_eigs.py
WM4196/eigenvolumes/: eigenvolume_0001.mrc  eigenvolume_0002.mrc  eigenvolume_0003.mrc  eigenvolume_0004.mrc  eigenvolume_0005.mrc  eigenvolume_0006.mrc  eigenvolume_0007.mrc  eigenvolume_0008.mrc  eigenvolume_0009.mrc  eigenvolume_0010.mrc  eigenvolume_0011.mrc  eigenvolume_0012.mrc  eigenvolume_0013.mrc  eigenvolume_0014.mrc  eigenvolume_0015.mrc  eigenvolume_0016.mrc  eigenvolume_0017.mrc  eigenvolume_0018.mrc  eigenvolume_0019.mrc  eigenvolume_0020.mrc  eigenvolume_0021.mrc  eigenvolume_0022.mrc  eigenvolume_0023.mrc  eigenvolume_0024.mrc  eigenvolume_0025.mrc  eigenvolume_0026.mrc  eigenvolume_0027.mrc  eigenvolume_0028.mrc  eigenvolume_0029.mrc  eigenvolume_0030.mrc  eigenvolume_0031.mrc  eigenvolume_0032.mrc  eigenvolume_0033.mrc  eigenvolume_0034.mrc  eigenvolume_0035.mrc  eigenvolume_0036.mrc  eigenvolume_0037.mrc  eigenvolume_0038.mrc  eigenvolume_0039.mrc  eigenvolume_0040.mrc  (+10 more)
napari-filter-threshold/: pyproject.toml
napari-filter-threshold/src/napari_filter_threshold/: __init__.py  napari.yaml
toy-plugin/toy_plugin/: __init__.py
