[project]
name = "napari-filter-threshold"
version = "0.0.1"
authors = [
  { name="Draga Doncila Pop", email="ddoncila@gmail.com" },
  { name="Juan Nunez-Iglesias", email="jni@fastmail.com" },
]
description = "A small plugin for filtering and thresholding images"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.entry-points."napari.manifest"]
napari-filter-threshold = "napari_filter_threshold:napari.yaml"

[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
